# CVUtils

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cpplint.sh
include/: image_utils.h
tests/: CMakeLists.txt  get_set_value_test.h  is_equal_test.h  main.cpp  test_runner.cpp  trim_test.h
